<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SBTS</string>
    <string name="title_activity_maps">Map</string>
    <string name="submit">Submit</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="registration_form">Registration Form</string>
    <string name="logo">logo</string>
    <string name="anime_title">Anime Title</string>
    <string name="_0_0">0.0</string>
    <string name="category">Category</string>
    <string name="studio">Studio</string>
    <string name="parent">PARENT</string>
    <string name="attendee">ATTENDEE</string>
    <string name="enter_your_first_name">Enter your first name*</string>
    <string name="enter_your_middle_name">Enter your middle name*</string>
    <string name="enter_your_last_name">Enter your last name*</string>
    <string name="enter_your_email_address">Enter your Email Address*</string>
    <string name="enter_your_phone_number">Enter your phone number*</string>
    <string name="enter_your_child_s_id_number">Enter your child\'s ID*</string>
    <string name="enter_your_password">Enter your password*</string>
    <string name="attRegFailed">Registration Failed! Please enter a valid email</string>
    <string name="attRegSuccessful">Registration Successful! Please check your email</string>
    <string name="log_out">Log Out</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="attendee_registration">Attendee Registration</string>
    <string-array name="Role">
        <item>Parent</item>
        <item>Attendee</item>
    </string-array>
    <string name="title_activity_test">testActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
